merge disabler with generated_data Fixes #262
included is a migration from raw text with escaped characters to a JsonObject that get's prettyParsed into the actual file.